--- a/questions/questions.tex
+++ b/questions/questions.tex
@@ -32,7 +32,7 @@
       \caption{Upstream - after angular cut} \label{fig:upstream_after}
     \end{subfigure}
 
-    \caption{Extrapolated points of the MuCS-tagged tracks at the height of top and bottom panels for the upstream configuration before and after an angular cut of 5$^{\circ}$ on $\Delta_{\theta}$ and $\Delta_{\phi}$.} \label{fig:alignment}
+    \caption{Extrapolated points of the MuCS-tagged tracks at the height of top and bottom panels for the upstream configuration before and after an angular cut of 5$^{\circ}$ on $\Delta\theta$ and $\Delta\phi$.} \label{fig:alignment}
   \end{figure}
   \item[Mike K - How do you reconcile 96.1\% reconstruction efficiency with the few percent efficiency quoted by Tim Bolton?]
   Our efficiency and the one quoted by Tim cannot be compared directly. In our case, every event has a MuCS cosmic ray and we measure the fraction of those events with a reconstructed track, while Tim's 6\% includes CC-inclusive event selection.
@@ -60,12 +60,12 @@ Right, I added the labels.
 Yes, the P/A correction is applied to the merged sample, so same value for the three configurations.
 
 \item[A - around line 208 - In a previous thread, Vassili suggested making a plot of the $d$ variable. I think a data/MC comparison of this variable might be a good plot for the internal note.]
-We agree this is a useful plot. Figure \ref{fig:dist} shows the distribution of the $d$ variable for data and Monte Carlo. As you can see, there are some small discrepancies, but our cut is in the region where the number of events is low and the differences between data and Monte Carlo are negligibile.
+We agree this is a useful plot. Figure \ref{fig:dist} shows the distribution of the $d$ variable for data and Monte Carlo. As you can see, there are some small discrepancies, but our cut is in the region where the number of events is low and the differences between data and Monte Carlo are negligible.
 
 \begin{figure}[htbp]
 \begin{center}
   \includegraphics[width=0.7\linewidth]{../figures/dist.pdf}
-  \caption{Distribution of the distance between the extrapolated starting point and the reconstructed track startin point for data (black points) and Monte Carlo (solid red line).} \label{fig:dist}
+  \caption{Distribution of the distance between the extrapolated starting point and the reconstructed track startin point for data (black points) and Monte Carlo (solid red line). Distribution are integral-normalized.} \label{fig:dist}
 \end{center}
 \end{figure}
 
