--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,8 @@ The message of the public note based upon this document is as follows:
 
 \end{itemize}
 
-The figures that will be carried forward to the public note are Figs. \ref{fig:coord}, \ref{fig:mucs}, \ref{fig:evd}, \ref{fig:alignment}, \ref{fig:mucs_angles}, \ref{fig:purity}, \ref{fig:3d}, \ref{fig:significance}, \ref{fig:wires}, \ref{fig:example}, \ref{fig:sampling}, \ref{fig:1d}, \ref{fig:2d}.
+We intend to include this analysis in a paper to be submitted to JINST. The figures that will be carried forward to the paper are Figs. \ref{fig:coord}, \ref{fig:scheme}, \ref{fig:mucs}, \ref{fig:evd}, \ref{fig:purity}, \ref{fig:3d}, \ref{fig:significance}, \ref{fig:wires}, \ref{fig:example}, \ref{fig:1d}, \ref{fig:2d}.
+
 \clearpage{}
 \section{Introduction}
 This analysis note describes the work done to study the reconstruction efficiencies using a dataset of cosmic rays in the MicroBooNE TPC passing through the Muon Counter System (MuCS).
