--- a/main.tex
+++ b/main.tex
@@ -47,19 +47,18 @@
 
 \section*{0. Purpose of Forthcoming Public Note}
 
-The message of the public note based upon this document is as follows:
+The message of the paper to be submitted to JINST, based upon this document, is as follows:
 
 \begin{itemize}
   \item reconstructed tracks in a LArTPC can be matched to hits in an external cosmic-ray counter (in our case the MuCS);
   \item the data reconstruction efficiency can be measured comparing the number of MuCS-triggered events with the number of MuCS reconstructed tracks;
-  \item the multiple scattering of the cosmic rays introduces an irreducible impurity in our sample of MuCS reconstructed tracks.
-  \item there is a small systematic uncertainty in the measurement of the data reconstruction efficiency due to the presence of detector non-uniformities;
-  \item taking into account these systematic effects, the data reconstruction efficiency obtained with the MuCS is in agreement with a Monte Carlo reconstruction efficiency generated uniformly across the TPC;
+  \item the multiple scattering of the cosmic rays introduces an irreducible impurity in our sample of MuCS reconstructed tracks;
+  \item there is a small systematic uncertainty in the measurement of the data reconstruction efficiency due to the presence of detector non-uniformities.  Taking into account these systematic effects, the data reconstruction efficiency obtained with the MuCS is in agreement with a Monte Carlo reconstruction efficiency generated uniformly across the TPC;
   \item this work demonstrates that the method presented is very appropriate to obtain cosmic-ray reconstruction efficiency and can be applied to the future CRT data.
 
 \end{itemize}
 
-We intend to include this analysis in a paper to be submitted to JINST. The figures that will be carried forward to the paper are Figs. \ref{fig:coord}, \ref{fig:scheme}, \ref{fig:mucs}, \ref{fig:evd}, \ref{fig:purity}, \ref{fig:3d}, \ref{fig:significance}, \ref{fig:wires}, \ref{fig:example}, \ref{fig:1d}, \ref{fig:2d}.
+The figures that will be carried forward to the paper are Figs. \ref{fig:coord}, \ref{fig:mucs}, \ref{fig:scheme},  \ref{fig:evd}, \ref{fig:purity}, \ref{fig:3d}, \ref{fig:significance}, \ref{fig:wires}, \ref{fig:example}, \ref{fig:1d}, \ref{fig:2d}.
 
 \clearpage{}
 \section{Introduction}
